# aravis-vmk180-petalinux

./: README.md
aravis-0.8.22/: meson_options.txt
aravis-0.8.22/src/: arvdomnodechildlist.h  arvgvdevice.c
aravis-0.8.22/tests/: arvdevicetest.c
xilinx-vmk180-petalinux-2022.1/components/plnx_workspace/device-tree/device-tree/: device-tree.mss  pcw.dtsi  system-conf.dtsi  system-top.dts
xilinx-vmk180-petalinux-2022.1/components/yocto/: environment-setup-cortexa72-cortexa53-xilinx-linux  version-cortexa72-cortexa53-xilinx-linux
xilinx-vmk180-petalinux-2022.1/components/yocto/conf/: bblayers.conf  devtool.conf  local.conf  locked-sigs.inc  prserv.inc  sdk-conf-manifest
xilinx-vmk180-petalinux-2022.1/components/yocto/layers/core/bitbake/lib/bb/pysh/: pyshtables.py
xilinx-vmk180-petalinux-2022.1/components/yocto/layers/meta-petalinux/conf/distro/include/: petalinux-version.conf
xilinx-vmk180-petalinux-2022.1/project-spec/configs/: config.old  rootfs_config  rootfs_config.old
xilinx-vmk180-petalinux-2022.1/project-spec/hw-description/: system.xsa
xilinx-vmk180-petalinux-2022.1/project-spec/meta-user/conf/: petalinuxbsp.conf
